objects/Plant_Account_Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plant Account Shipments</relationshipLabel>
        <relationshipName>Plant_Account_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BUILDING_NAME_MFG__c</fullName>
        <formula>Manufacturing_Plant__r.BUILDING_NAME_MFG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BUILDING NAME MFG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUILDING_NBR_MFG__c</fullName>
        <formula>Manufacturing_Plant__r.BUILDING_NBR_MFG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BUILDING_NBR_MFG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Business_Understanding__c</fullName>
        <formula>IF( NPS_Business_Understanding__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Business Understanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Competitive_Price__c</fullName>
        <formula>IF( NPS_Competitive_Price__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Competitive Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Customer_Care_Support__c</fullName>
        <formula>IF( NPS_Customer_Care_Support__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Customer Care Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Delivery_Performance__c</fullName>
        <formula>IF( NPS_Delivery_Performance__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Delivery Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Engg_Responsiveness__c</fullName>
        <formula>IF( NPS_Engineering_Responsiveness__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Engg Responsiveness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Field_Tech_Support__c</fullName>
        <formula>IF( NPS_Field_Tech_Support__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Field Tech Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Product_Innovation__c</fullName>
        <formula>IF( NPS_Product_Innovation__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Product Innovation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Product_Quality__c</fullName>
        <formula>IF( NPS_Product_Quality__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Product Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor_Count_Technology_needs_met__c</fullName>
        <formula>IF( NPS_Technology_needs_met__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count  Technology needs met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LONG_NAME_MFG_ORG__c</fullName>
        <formula>Manufacturing_Plant__r.LONG_NAME_MFG_ORG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LONG NAME MFG ORG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANUFACTURING_ORGANIZATION_ID__c</fullName>
        <formula>Manufacturing_Plant__r.MANUFACTURING_ORGANIZATION_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MANUFACTURING ORGANIZATION ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant__c</fullName>
        <label>Manufacturing Plant</label>
        <referenceTo>Manufacturing_Plant__c</referenceTo>
        <relationshipLabel>Plant Account Shipments</relationshipLabel>
        <relationshipName>Plant_Account_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NPS_Business_Understanding_Total__c</fullName>
        <formula>NPS_Business_Understanding__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Business Understanding Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Business_Understanding__c</fullName>
        <label>NPS Business Understanding</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Competitive_Price_Total__c</fullName>
        <formula>NPS_Competitive_Price__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Competitive Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Competitive_Price__c</fullName>
        <label>NPS Competitive Price</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Customer_Care_Support_Total__c</fullName>
        <formula>NPS_Customer_Care_Support__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Customer Care Support Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Customer_Care_Support__c</fullName>
        <label>NPS Customer Care Support</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Delivery_Performance_Total__c</fullName>
        <formula>NPS_Delivery_Performance__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Delivery Performance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Delivery_Performance__c</fullName>
        <label>NPS Delivery Performance</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Detractor_Count__c</fullName>
        <formula>IF( NPS_Overall_Score__c &lt; 7 , Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Detractor Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Engineering_Responsiveness_Total__c</fullName>
        <formula>NPS_Engineering_Responsiveness__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Engineering Responsiveness Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Engineering_Responsiveness__c</fullName>
        <label>NPS Engineering Responsiveness</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Field_Tech_Support_Total__c</fullName>
        <formula>NPS_Field_Tech_Support__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Field Tech Support Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Field_Tech_Support__c</fullName>
        <label>NPS Field Tech Support</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Overall_Score_Total__c</fullName>
        <formula>NPS_Overall_Score__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Overall Score Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Overall_Score__c</fullName>
        <label>NPS Overall Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Passive_Count__c</fullName>
        <formula>IF( NPS_Overall_Score__c &gt;= 7 , IF( NPS_Overall_Score__c &lt; 9,  Shipment_Count__c  , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Passive Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Product_Innovation_Total__c</fullName>
        <formula>NPS_Product_Innovation__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Product Innovation Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Product_Innovation__c</fullName>
        <label>NPS Product Innovation</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Product_Quality_Total__c</fullName>
        <formula>NPS_Product_Quality__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Product Quality Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Product_Quality__c</fullName>
        <label>NPS Product Quality</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Promoter_Count__c</fullName>
        <formula>IF( NPS_Overall_Score__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Promoter Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Technology_needs_met_Total__c</fullName>
        <formula>NPS_Technology_needs_met__c * Shipment_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Technology needs met Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Technology_needs_met__c</fullName>
        <label>NPS Technology needs met</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Total_Count__c</fullName>
        <formula>IF( NPS_Overall_Score__c &gt;= 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Total Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Business_Understanding__c</fullName>
        <formula>IF( NPS_Business_Understanding__c &gt;= 7 , IF( NPS_Business_Understanding__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Business Understanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Competitive_Price__c</fullName>
        <formula>IF( NPS_Competitive_Price__c &gt;= 7 , IF( NPS_Competitive_Price__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Competitive Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Customer_Care_Support__c</fullName>
        <formula>IF( NPS_Customer_Care_Support__c &gt;= 7 , IF( NPS_Customer_Care_Support__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Customer Care Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Delivery_Performance__c</fullName>
        <formula>IF( NPS_Delivery_Performance__c &gt;= 7 , IF( NPS_Delivery_Performance__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Delivery Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Engg_Responsiveness__c</fullName>
        <formula>IF( NPS_Engineering_Responsiveness__c &gt;= 7 , IF( NPS_Engineering_Responsiveness__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Engg Responsiveness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Field_Tech_Support__c</fullName>
        <formula>IF( NPS_Field_Tech_Support__c &gt;= 7 , IF( NPS_Field_Tech_Support__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Field Tech Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Product_Innovation__c</fullName>
        <formula>IF( NPS_Product_Innovation__c &gt;= 7 , IF( NPS_Product_Innovation__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Product Innovation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Product_Quality__c</fullName>
        <formula>IF( NPS_Product_Quality__c &gt;= 7 , IF( NPS_Product_Quality__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Product Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passive_Count_Technology_needs_met__c</fullName>
        <formula>IF( NPS_Technology_needs_met__c &gt;= 7 , IF( NPS_Technology_needs_met__c &lt; 9, Shipment_Count__c , 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passive Count  Technology needs met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Account__c</fullName>
        <label>Plant Account</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <formula>Manufacturing_Plant__r.BUILDING_NAME_MFG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Business_Understanding__c</fullName>
        <formula>IF( NPS_Business_Understanding__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Business Understanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Competitive_Price__c</fullName>
        <formula>IF( NPS_Competitive_Price__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Competitive Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Customer_Care_Support__c</fullName>
        <formula>IF( NPS_Customer_Care_Support__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Customer Care Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Delivery_Performance__c</fullName>
        <formula>IF( NPS_Delivery_Performance__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Delivery Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Engg_Responsiveness__c</fullName>
        <formula>IF( NPS_Engineering_Responsiveness__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Engg Responsiveness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Field_Tech_Support__c</fullName>
        <formula>IF( NPS_Field_Tech_Support__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Field Tech Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Product_Innovation__c</fullName>
        <formula>IF( NPS_Product_Innovation__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Product Innovation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Product_Quality__c</fullName>
        <formula>IF( NPS_Product_Quality__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Product Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count_Technology_needs_met__c</fullName>
        <formula>IF( NPS_Technology_needs_met__c &gt;= 9 ,Shipment_Count__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count Technology needs met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Count__c</fullName>
        <label>Shipment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <label>Plant Account Shipment</label>
    <nameField>
        <label>Plant Account Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Account Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>